<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StrikeDistance</string>
    <string name="action_settings">Settings</string>
    <string name="resultMessageFormat" formatted="false">The lightning struck approximately %s %s away.</string>
    <string name="action_calculate">Calculate</string>
    <string name="action_clear">Clear</string>
    <string name="header1">Outside Temperature</string>
    <string name="action1_2">+/-</string>
    <string name="action1_1">Use my location</string>
    <string name="header2">Time Between Flash and Boom</string>
    <string name="action2_2">Reset</string>
    <string name="action2_1">Stopwatch</string>
    <string name="action_feedback">Send feedback</string>
    <string name="header3">Weather Overview</string>
    <string name="emptyField">0.0</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="elevation">Elevation</string>
    <string name="conditions">Conditions</string>
    <string name="temperature">Temperature</string>
    <string name="feelslike">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="winddirection">Wind direction</string>
    <string name="windspeed">Wind speed</string>
    <string name="windgustspeed">Wind gust speed</string>
    <string name="pressure">Pressure</string>
    <string name="viewOnWU">View on Wunderground</string>
    <string name="viewHistorical">View historical weather</string>
    <string name="resultMessagePositiveButton">Close</string>
    <string name="pref_1">Units</string>
    <string name="temp_0">Fahrenheit</string>
    <string name="temp_1">Celsius</string>
    <string name="temp_2">Kelvin</string>
    <string name="dist_0">Feet/Miles</string>
    <string name="dist_1">Meters/Kilometers</string>
    <string name="speed_0">Miles per hour</string>
    <string name="speed_1">Kilometers per hour</string>
    <string name="psr_0">Inches</string>
    <string name="psr_1">Millibars</string>
    <string name="temp_title">Temperature Unit</string>
    <string name="dist_title">Distance Unit</string>
    <string name="speed_title">Speed Unit</string>
    <string name="psr_title">Pressure Unit</string>
    <string name="dist_key">distUnit</string>
    <string name="temp_key">tempUnit</string>
    <string name="speed_key">speedUnit</string>
    <string name="psr_key">psrUnit</string>
    <string name="pref_2">Automatic Functions</string>
    <string name="autoGet_key">autoGet</string>
    <string name="autoGet_title">Get weather data on start</string>
    <string name="pref_3">Verbose Mode Settings</string>
    <string name="vbMain_key">vbMain</string>
    <string name="vbMain_title">Verbose Mode</string>
    <string name="vbMain_on">Enabled</string>
    <string name="vbMain_off">Disabled</string>
    <string name="vbUnitDetails">Unit details</string>
    <string name="vbConvMath">Conversion math</string>
    <string name="vbCalcMath">Calculation math</string>
    <string name="vbUnitDetails_key">vbUnitDetails</string>
    <string name="vbConvMath_key">vbConvMath</string>
    <string name="vbCalcMath_key">vbCalcMath</string>
    <string name="vbData_title">Verbose Mode Data</string>
    <string name="vbData_key">vbData</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="unavailable">Unavailable</string>
    <string name="hello_world">Hello world!</string>

</resources>
