<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_1">
        <ListPreference
            android:entries="@array/tempUnitsEntries"
            android:title="@string/temp_title"
            android:dialogTitle="@string/temp_title"
            android:key="tempUnit"
            android:entryValues="@array/tempUnitsValues"
            android:defaultValue="0"/>
        <ListPreference
            android:title="@string/dist_title"
            android:dialogTitle="@string/dist_title"
            android:key="distUnit"
            android:entryValues="@array/distUnitsValues"
            android:entries="@array/distUnitsEntries"
            android:defaultValue="0"/>
        <ListPreference
            android:entryValues="@array/speedUnitsValues"
            android:entries="@array/speedUnitsEntries"
            android:title="@string/speed_title"
            android:dialogTitle="@string/speed_title"
            android:key="speedUnit"
            android:defaultValue="0"/>
        <ListPreference
            android:entryValues="@array/psrUnitsValues"
            android:entries="@array/psrUnitsEntries"
            android:title="@string/psr_title"
            android:dialogTitle="@string/psr_title"
            android:key="psrUnit"
            android:defaultValue="0"/>
    </PreferenceCategory>
    <PreferenceCategory
		android:title="@string/pref_2">
        <CheckBoxPreference
            android:key="autoGet"
            android:defaultValue="true"
            android:title="@string/autoGet_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_3">
        <SwitchPreference
            android:key="vbMain"
            android:title="@string/vbMain_title"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="vbUnitDetails"
            android:title="@string/vbUnitDetails"
            android:defaultValue="false"
            android:dependency="vbMain"/>
        <CheckBoxPreference
            android:key="vbConvMath"
            android:title="@string/vbConvMath"
            android:defaultValue="false"
            android:dependency="vbMain"/>
        <CheckBoxPreference
            android:key="vbCalcMath"
            android:title="@string/vbCalcMath"
            android:defaultValue="false"
            android:dependency="vbMain"/>
    </PreferenceCategory>
</PreferenceScreen>
