<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/StrikeDistanceBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.devgregw.strikedistance_androidphoneandtablet.CalculatorActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/header1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:gravity="center" />

    <EditText
        android:id="@+id/temperatureBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/action1_1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.0"
        android:textColor="@color/white" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/action1_2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/temperatureBox"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/action1_2"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/action1_1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/temperatureBox"
        android:layout_alignTop="@+id/temperatureBox"
        android:layout_toLeftOf="@+id/action1_2"
        android:text="@string/action1_1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temperatureBox"
        android:layout_below="@+id/temperatureBox"
        android:gravity="center"
        android:text="@string/header2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/Button01"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/EditText01"
        android:layout_alignRight="@+id/TextView01"
        android:layout_alignTop="@+id/EditText01"
        android:text="@string/action2_2"
        android:textColor="@color/white" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Button01"
        android:layout_alignTop="@+id/EditText01"
        android:layout_toLeftOf="@+id/Button01"
        android:text="@string/action2_1"
        android:textColor="@color/white"
        android:textOff="@string/action2_1"
        android:textOn="@string/action2_1" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_toLeftOf="@+id/toggleButton1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.0"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Button01"
        android:gravity="center"
        android:text="@string/header3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView02" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

    </ScrollView>
    
</RelativeLayout>
